--- a/index.html
+++ b/index.html
@@ -39,3 +39,26 @@
 </body>
 
 </html>
+
+<!-- 
+git log - visualizar nossa lista de commits
+git log --oneline - visualizar o log de commits de forma resumida 
+git log -p -além das informações padrão, o hash completo, o autor ou autora,a data e a mensagem do commit
+git show {hash do commit} - visualização do conteud e os detalhes desse commit
+git status - nos indica em qual ramificação (branch) estamos
+git diff - são exibidas as diferenças entre dois estados
+git brnach - visualizar as branch
+git branch -m master main - renomear a master para main
+git branch -d nomebranch - para remover uma branch
+git branch nomebranch - criando uma branch
+git checkout -b nomebranch - criando e alternando entre branch
+git switch -c novabranch - criando e alternando entre branches
+git merge novabranch - mescla a novabranch com a branch antiga
+git push origin :novabranch - removendo a branch do repositorio remoto
+git rebase main - pegará o primeiro commit e tentar adicionar antes do commit da novabranch
+git stash pop - aplica o que tiver na nossa gaveta, no nosso estoque
+git stash clear - limpando a stash
+git restore - restaura o local de trabalho para um estado válido
+git cherry-pick - para buscar um commit especifico
+git blame - mostra quem alterou cada uma das linhas do arquivo 
+  -->
